# diffused_fields_robotics-1

./: .gitignore  README.md  pyproject.toml
scripts/: coverage.py  peeling.py  policy_transfer.py  slicing.py
scripts/batch_experiments/: README.md  batch_peeling.py
src/diffused_fields_robotics/local_action_primitives/: action_primitives.py
